--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -13,7 +13,7 @@
 	margin: 0 auto;
 }
 body{
-	background: url('../img/bg.svg') no-repeat;
+	background: url('../img/bg.png') no-repeat;
 	background-size: cover;
 	height: 100vh;
 }
@@ -57,8 +57,9 @@ body{
     	display: flex;
 		flex-direction: column;
 		padding-left: 76px;
-		padding-top: 79px;
+		padding-top: 89px;
 		h1{
+			font-size: 3.4em;
 			line-height: 1.3em;
 			color: $dark-blue;
 		}
@@ -72,13 +73,7 @@ body{
 			margin-top: 19px;
 		}
 	}
-	.intro-personagem{
-		padding: 79px 0 143px 46px;
-		img{
-			display: block;
-			width: 340px;
-		}
-	}
+	
 }
 
 .nossas-solucoes{
@@ -86,6 +81,7 @@ body{
 	display: flex;
 	flex-direction: column;
 	text-align: center;
+	padding-top: 200px;
 	h2{
 		color: $ligth-gray;
 	}
@@ -148,5 +144,92 @@ body{
 	.estrofe-nossas-solucoes{
 		font-family: 'Montserrat Medium';
 		font-size: em(14);
+	}
+}
+
+.sobre{
+	
+	.img-sobre{
+		width: 226px;
+		display: block;
+		position: relative;
+		left: 90px;
+	}
+	.texto-sobre{
+		margin: 112px 0 0 131px;
+    text-align: justify;
+    max-width: 820px;
+		h2{
+			color: $ligth-gray;
+		}
+		h3{
+			color:$dark-blue;
+			margin-bottom: 20px;
+		}
+		p{
+			margin-top: 30px;
+			line-height: 1.5em;
+			font-family: 'Montserrat Medium';
+			font-size: em(14);
+			color: $gray;
+			margin-bottom: 30px;
+			
+		}
+	}
+}    
+
+.projetos{
+	flex-direction: column;
+    justify-content: center;
+    align-items: center;
+	padding-top: 184px;
+	h2{
+		color: $ligth-gray;
+	}
+	h3{
+		color:$dark-blue;
+		margin-bottom: 20px;
+	}
+	.estrofe-projetos{
+		font-family: 'Montserrat Medium';
+		font-size: em(14);
+		line-height: em(30);
+		color:$gray;
+
+	}
+
+	li{
+		max-width: 257px;
+		display: inline-block;
+		margin: 15px;
+		box-shadow: 1px 4px 13px 12px #e4e6ee;
+		cursor: pointer;
+		figure{
+			position: relative;
+			img{
+				width: 100%;
+				
+			}
+			.overlay-projeto{
+				background: $ligth-gray;
+				position: absolute;
+				color:$dark-blue;
+				width: 100%;
+				height: 0%;
+				display: flex;
+				justify-content: center;
+				align-items: center;
+				opacity: 0;
+				font-family: 'Montserrat ExtraBold';
+				transition: all .4s linear;
+			}
+		}
+		&:hover{
+			.overlay-projeto{
+				opacity: .9;
+				height: 100%;
+			}
+			
+		}
 	}
 }
