feat: finalizado listagem do blog

--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -17,219 +17,16 @@ body{
 	background-size: cover;
 	height: 100vh;
 }
-.header{
-	padding: 36px 0 0 73px;
-	align-items: center;
-	justify-content: center;
-	.header-logo{
-		flex:1;
-	}
-	.menu-header{
-			li{
-				display: inline-block;
-				font-family: 'Montserrat Medium';
-				font-size: em(16);
-				flex: 1;
-				margin-right: 46px;
-				&:nth-last-child(1){
-					margin-right: 0;
-				}
-				a{
-					text-decoration: none;
-					color: $dark-gray;
-					padding: 10px;
-					border: 2px solid rgba(255,255,255,0);
-					transition: all .8s;
-					&:hover{
-						
-						border: 2px solid rgba(88,87,87,1);
-						
-					}
-				}
-			}
-	}
-}
 
-.intro{
-	display: flex;
-	.intro-chamada {
-		max-width: 685px;
-    	display: flex;
-		flex-direction: column;
-		padding-left: 76px;
-		padding-top: 89px;
-		h1{
-			font-size: 3.4em;
-			line-height: 1.3em;
-			color: $dark-blue;
-		}
-		p{
-			max-width: 413px;
-			margin-top: 10px;
-			line-height: em(30);
+@import './sections/header';
+@import './sections/intro';
+@import './sections/about';
+@import './sections/solutions';
+@import './sections/projects';
+@import './sections/blog';
 
-		}
-		a{
-			margin-top: 19px;
-		}
-	}
-	
-}
 
-.nossas-solucoes{
 
-	display: flex;
-	flex-direction: column;
-	text-align: center;
-	padding-top: 200px;
-	h2{
-		color: $ligth-gray;
-	}
-	h3{
-		color:$dark-blue;
-		margin-bottom: 20px;
-	}
-	p{
-		line-height: em(30);
-		color:$gray;
-		
-	}
-	.solucoes{
-		margin-top: 54px;
-		margin-bottom: 54px;
-		ul {
-			display: flex;
-			justify-content: center;
-			align-items: center;
-			li{
-				margin-right: 30px;
-				height: 358px;
-				width: 308px;
-				background: url('../img/poligono_bg_solucoes.svg') no-repeat;
-				background-size:contain;
-				background-position:  center center;
-				display: flex;
-				flex-direction: column;
-				justify-content: center;
-				align-items: center;
 
-				&:nth-last-child(1){
-					margin-right: 0;
-				}
-				&:first-child{
-					h4{
-						margin: 29px 0 15px 0;
-					}
-				}
-				h4{
-					font-family: 'Montserrat ExtraBold';
-					font-size: em(18);
-					color: $dark-blue;
-					max-width: 214px;
-					margin: 34px 0 15px 0;
 
-					
-				}
-				p{
-					font-family: 'Montserrat Medium';
-					font-size: em(12);
-					max-width: 204px;
-				}
-				img{
-					width:70px;
-				}
-			}
-		}
-	}
-	.estrofe-nossas-solucoes{
-		font-family: 'Montserrat Medium';
-		font-size: em(14);
-	}
-}
 
-.sobre{
-	
-	.img-sobre{
-		width: 226px;
-		display: block;
-		position: relative;
-		left: 90px;
-	}
-	.texto-sobre{
-		margin: 112px 0 0 131px;
-    text-align: justify;
-    max-width: 820px;
-		h2{
-			color: $ligth-gray;
-		}
-		h3{
-			color:$dark-blue;
-			margin-bottom: 20px;
-		}
-		p{
-			margin-top: 30px;
-			line-height: 1.5em;
-			font-family: 'Montserrat Medium';
-			font-size: em(14);
-			color: $gray;
-			margin-bottom: 30px;
-			
-		}
-	}
-}    
-
-.projetos{
-	flex-direction: column;
-    justify-content: center;
-    align-items: center;
-	padding-top: 184px;
-	h2{
-		color: $ligth-gray;
-	}
-	h3{
-		color:$dark-blue;
-		margin-bottom: 20px;
-	}
-	.estrofe-projetos{
-		font-family: 'Montserrat Medium';
-		font-size: em(14);
-		line-height: em(30);
-		color:$gray;
-
-	}
-
-	li{
-		max-width: 257px;
-		display: inline-block;
-		margin: 15px;
-		box-shadow: 1px 4px 13px 12px #e4e6ee;
-		cursor: pointer;
-		figure{
-			position: relative;
-			img{
-				width: 100%;
-				
-			}
-			.overlay-projeto{
-				background: $ligth-gray;
-				position: absolute;
-				color:$dark-blue;
-				width: 100%;
-				height: 0%;
-				display: flex;
-				justify-content: center;
-				align-items: center;
-				opacity: 0;
-				font-family: 'Montserrat ExtraBold';
-				transition: all .4s linear;
-			}
-		}
-		&:hover{
-			.overlay-projeto{
-				opacity: .9;
-				height: 100%;
-			}
-			
-		}
-	}
-}
